--- a/src/components/header/desktopnav.css
+++ b/src/components/header/desktopnav.css
@@ -24,8 +24,8 @@
     position: absolute;
     height: 20px;
     width: 1px;
-    background-color: #a09999;
-    opacity: 0.8;
+    background-color: #c1b7b7;
+    opacity: 0.7;
     top: 50%;
     right: -10px;
     transform: translateY(-50%);
@@ -51,6 +51,6 @@
 }
 
 .hotdeal {
-    color: #b42489;
+    color: #cc2a9c;
     font-weight: 700;
 }
