--- a/src/components/home/brandslider.css
+++ b/src/components/home/brandslider.css
@@ -1,17 +1,22 @@
-.contain{
+.contain {
     margin-top: 10px;
+    width: 80%;
+    margin: 0 auto;
 }
-.heading{
+
+.heading {
     margin-top: 40px;
     margin-bottom: 10px;
     padding-bottom: 8px;
 }
-.heading h3{
+
+.heading h3 {
     font-size: 30px;
     color: #3A393A;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.branding {
+
+.brcontain {
     display: flex;
 }
 
@@ -20,28 +25,40 @@
     width: 50%;
 }
 
-.carousel-container img {
+.carouselbrand img {
     width: 100%;
 }
 
 .listbrand {
-    display: flex;
     width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .brand-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    width: 25%;
 }
+
 .brand-logo img {
     width: 100%;
     height: auto;
-    object-fit: contain;
+
 }
 
 @media (max-width: 768px) {
-    .brandslider-container {
-        display: none;
+    .brcontain {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .brandslider-container{
+        width: 100%;
+    }
+    .listbrand {
+        width: 100%;
+        display: flex;
     }
 }
