--- a/src/components/home/groupproducts/group1.css
+++ b/src/components/home/groupproducts/group1.css
@@ -15,6 +15,7 @@
 }
 .heading p,i {
     color: #444244;
+    padding-right: 5px;
 }
 .heading i{
     margin-left: 6px;
@@ -39,8 +40,11 @@
     left: 10px;
     background: red;
     color: #fff;
-    padding: 5px 10px;
+    padding: 4px 8px;
     font-size: 12px;
+    font-weight: 700;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);;
     z-index: 1;
 }
 
