--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 html,
-body {
+*{
   border: 0;
   background-color: #fff;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
