--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-image: linear-gradient(to top, rgb(255, 211, 225), #fdf5f5);
     box-sizing: border-box; 
-    padding: 20px 0;
+    padding: 20px 0 10px 0;
 }
 
 .footer-container {
@@ -9,8 +9,11 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
     color: #222020;
+}
+.footer-container .col1{
+    text-align: center;
 }
 
 .footer-container .col1,
@@ -21,9 +24,13 @@
     padding: 0 20px;
     box-sizing: border-box;
 }
+.footer-container .col2{
+    padding-left: 70px;
+}
 
 .footer-container .col1 img {
-    max-width: 50%;
+    padding-top: 25px;
+    max-width: 150px;
     margin-bottom: 5px;
 }
 .footer-container .col1 p{
@@ -58,7 +65,7 @@
 
 .footer-container ul {
     list-style: none;
-
+    padding: 0;
 }
 
 .footer-container ul li {
@@ -148,6 +155,8 @@
     .footer-container .col4 {
         flex: 1 1 50%;
         max-width: 50%;
+        text-align: center;
+        padding: 0;
     }
 }
 
@@ -161,16 +170,26 @@
         flex: 1 1 100%;
         max-width: 100%;
         text-align: center;
+        padding: 0;
     }
 }
 
 @media (max-width: 576px) {
+    .footer-container .col1,
+    .footer-container .col2,
+    .footer-container .col3,
+    .footer-container .col4 {
+        flex: 1 1 100%;
+        max-width: 100%;
+        text-align: center;
+        padding: 0;
+    }
     .footer-container h5 {
         font-size: 18px;
         margin-bottom: 10px;
     }
     .footer-container .social-icons a i {
-        margin: 10px 0;
+        margin: 10px 10px;
     }
     .footer-container .col1 p {
         margin: 10px;
@@ -191,12 +210,21 @@
 }
 
 @media (max-width: 320px) {
+    .footer-container .col1,
+    .footer-container .col2,
+    .footer-container .col3,
+    .footer-container .col4 {
+        flex: 1 1 100%;
+        max-width: 100%;
+        text-align: center;
+        padding: 0;
+    }
     .footer-container h5 {
         font-size: 18px;
         margin-bottom: 10px;
     }
     .footer-container .social-icons a i {
-        margin: 10px 0;
+        margin: 10px 10px;
     }
     .footer-container .col1 p {
         margin: 10px;
