--- a/src/components/home/tabmenu.css
+++ b/src/components/home/tabmenu.css
@@ -1,11 +1,14 @@
-.tabbar1 {
+.tabbar1{
   margin-top: 50px;
+}
+.tab1bg, .tab2bg{
+  background-color: #f7f7f7;
 }
 
 .container-tab {
+  width: 80%;
   padding: 10px;
-  width: 100%;
-  background-color: #f7f7f7;
+  margin: 0 auto;
 }
 .container-tab h1{
   font-size: 28px;
@@ -25,7 +28,9 @@
 
 .list_logo h3 {
   margin: 10px;
-  font-size: 20px;
+  font-size: 18px;
+  font-weight: 600;
+  color: rgb(99, 99, 99);
 }
 
 .box {
@@ -35,17 +40,18 @@
 }
 
 .box img {
-  width: 80px;
-  height: 80px;
-  line-height: 40px;
+  width: 60px;
+  height: 60px;
+  margin: 0 auto;
   padding: 14px;
   border-radius: 50%;
-  background-color: #fff;
+  background-color: #ffffff;
+  padding: 10px;
 }
 
 .box.active img {
-  background-color: #ffe6eb;
-  border: 2px solid rgb(255, 111, 0);
+  background-color: #fff0f2;
+  border: 2px solid rgb(249, 91, 118);
 }
 
 .tab {
@@ -56,8 +62,9 @@
   display: block;
 }
 .contain-text{
+  margin: 0 auto;
   text-align: center;
-  max-width: 700px;
+  max-width: 720px;
 }
 .content {
   padding: 20px;
@@ -68,22 +75,12 @@
 }
 
 .content h5 {
+  color: rgb(249, 91, 118);
   font-size: 20px;
   margin: 15px 0;
 }
 
 @media (max-width:768px){
-  .list_logo {
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    margin-bottom: 20px;
-    margin: 0 auto;
-  }
-  .box {
-    flex: 100%;
-  }
 
   .container-tab h1{
     font-size: 26px;
@@ -93,7 +90,7 @@
   }
   .list_logo h3 {
     margin: 10px;
-    font-size: 18px;
+    font-size: 16px;
   }
   .content h5 {
     font-size: 18px;
@@ -105,20 +102,12 @@
   }
 }
 @media (max-width: 576px) {
-  .list_logo {
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    margin-bottom: 20px;
-    margin: 0 auto;
-  }
   .box {
     flex: 100%;
   }
   .box img {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background-color: #fff;
   }
