--- a/src/components/home/groupproducts/group1.css
+++ b/src/components/home/groupproducts/group1.css
@@ -39,6 +39,7 @@ i {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 0 4px;
 }
 
 .new-badge {
@@ -68,19 +69,20 @@ i {
 }
 
 .product-info {
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
 }
 
 .product-info h3 {
-    font-size: 16px;
+    font-size: 14px;
     margin: 6px 0;
     flex-grow: 1;
     min-height: 30px;
     line-height: 15px;
+    text-transform: uppercase;
 }
 
 .product-info .name {
