--- a/src/components/home/groupproducts/group2.css
+++ b/src/components/home/groupproducts/group2.css
@@ -33,6 +33,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 0 4px;
 }
 .product-card img {
     max-width: 70% !important;
@@ -45,19 +46,20 @@
 }
 
 .product-info {
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
 }
 
 .product-info h3 {
-    font-size: 16px;
+    font-size: 14px;
     margin: 6px 0;
     flex-grow: 1;
     min-height: 30px;
     line-height: 15px;
+    text-transform: uppercase;
 }
 .product-info .name {
     margin: 4px 0;
